syntax = "proto3";
package dipstick.xcp.v1;

import "dipstick/core/v1/entity.proto";
import "dipstick/core/v1/file.proto";

message A2lEntity {
  dipstick.core.v1.EntityMeta meta = 1;
  A2lSpec spec = 2;
  A2lStatus status = 3;
}

message A2lStatus {
  A2lFile file = 2;
  repeated string warnings = 1;
}

message A2lSpec {
  dipstick.core.v1.File file = 2;
  optional string a2ml_spec = 1;
  optional bool strict_parsing = 3;
}

message A2lFile {
  A2lProject project = 1;
}

message A2lProject {
  repeated A2lModule module = 1;
}

message A2lModule {
  repeated A2lCharacteristic characteristic = 2;
  repeated A2lMeasurement measurement = 1;
  repeated A2lRecordLayout record_layout = 3;
}

message A2lMeasurement {
  string name = 1;
  string long_identifier = 2;
  A2lDataType datatype = 3;
  string conversion = 6;
  optional uint32 ecu_address = 4;
  // i16
  optional int32 ecu_address_extension = 5;
}

enum A2lDataType {
  A2L_DATA_TYPE_UNSPECIFIED = 0;
  A2L_DATA_TYPE_UBYTE = 1;
  A2L_DATA_TYPE_SBYTE = 2;
  A2L_DATA_TYPE_UWORD = 3;
  A2L_DATA_TYPE_SWORD = 4;
  A2L_DATA_TYPE_ULONG = 5;
  A2L_DATA_TYPE_SLONG = 6;
  A2L_DATA_TYPE_A_UINT64 = 7;
  A2L_DATA_TYPE_A_INT64 = 8;
  A2L_DATA_TYPE_F16_IEEE = 9;
  A2L_DATA_TYPE_F32_IEEE = 10;
  A2L_DATA_TYPE_F64_IEEE = 11;
}

message A2lCharacteristic {
  string name = 1;
  string long_identifier = 2;
  uint32 address = 4;
  string deposit = 6;
  string conversion = 7;
  A2lByteOrder byte_order = 3;
  // i16
  optional int32 ecu_address_extension = 5;
}

enum A2lByteOrder {
  A2L_BYTE_ORDER_UNSPECIFIED = 0;
  A2L_BYTE_ORDER_LITTLE_ENDIAN = 1;
  A2L_BYTE_ORDER_BIG_ENDIAN = 2;
  A2L_BYTE_ORDER_MSB_LAST = 3;
  A2L_BYTE_ORDER_MSB_FIRST = 4;
  A2L_BYTE_ORDER_MSB_FIRST_MSW_LAST = 5;
  A2L_BYTE_ORDER_MSB_LAST_MSW_FIRST = 6;
}

message A2lRecordLayout {
  string name = 1;
  A2lFncValues fnc_values = 2;
}

message A2lFncValues {
  // u16
  uint32 position = 1;
  A2lDataType datatype = 2;
  A2lAddrType address_type = 4;
}

enum A2lAddrType {
  A2L_ADDR_TYPE_UNSPECIFIED = 0;
  A2L_ADDR_TYPE_PBYTE = 1;
  A2L_ADDR_TYPE_PWORD = 2;
  A2L_ADDR_TYPE_PLONG = 3;
  A2L_ADDR_TYPE_PLONGLONG = 4;
  A2L_ADDR_TYPE_DIRECT = 5;
}
